--- a/part3/package.json
+++ b/part3/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "morgan": "^1.10.0"
   }
 }
