--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.1.0",
     "express": "^4.19.2",
     "mongoose": "^8.8.1",
     "morgan": "^1.10.0"
